rohit/ Begin Migrating MongoDB + Integrating Rest APIs

--- a/student_management_app/templates/signup.html
+++ b/student_management_app/templates/signup.html
@@ -67,7 +67,7 @@
         <main class="form-signin">
             <form action='{% url "signup_process" %}' method="POST">
                 {% csrf_token %}
-            <h1 class="h3 mb-3 fw-normal">Sign UP NOTE APP</h1>
+            <h1 class="h3 mb-3 fw-normal">Sign UP in Student Portal</h1>
             <label for="inputfirstName" class="visually-hidden">First Name</label>
             <input type="text" id="inputfirstName" class="form-control" placeholder="First Name" name="first_name" required autofocus>
             <br>
